--- a/.github/workflows/chromium-build-tag.yml
+++ b/.github/workflows/chromium-build-tag.yml
@@ -15,25 +15,30 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: lts/*
-      
+
       - name: Install npm dependencies
         run: npm ci
 
       - name: Build the extension
         run: npm run build:chromium
 
+  release:
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps:
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             packages/liveworksheets-solver*
-      
+
       - name: Upload built artifact
         uses: actions/upload-artifact@v3
         with:
