--- a/.github/workflows/chromium-build-tag.yml
+++ b/.github/workflows/chromium-build-tag.yml
@@ -27,19 +27,26 @@ jobs:
       - name: Build the extension
         run: npm run build:chromium
 
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact
+          path: packages/liveworksheets-solver*
+
   release:
     runs-on: ubuntu-latest
     needs: [build]
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: packages/
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             packages/liveworksheets-solver*
-
-      - name: Upload built artifact
-        uses: actions/upload-artifact@v3
-        with:
-          path: packages/liveworksheets-solver*
